test/fixtures/syntax-error/bad.ts
export const x = {{{
  this is not valid typescript at all @@##
